# bracketlint

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/bl/: Cargo.toml  build.rs
crates/bl/src/: cli.rs  crash.rs  lib.rs  main.rs  version.rs
crates/bl/src/commands/: check.rs  mod.rs  version.rs
crates/bl_ast/: Cargo.toml
crates/bl_ast/src/: ast.rs  lib.rs  location.rs
crates/bl_diagnostics/: Cargo.toml
crates/bl_diagnostics/src/: lib.rs
crates/bl_lints/: Cargo.toml
crates/bl_lints/src/: lib.rs  settings.rs
crates/bl_macros/: Cargo.toml
crates/bl_macros/src/: lib.rs
crates/bl_macros/src/define_tree/: emit.rs  mod.rs  parse.rs  validate.rs
crates/bl_parse/: Cargo.toml
crates/bl_parse/src/: lib.rs
crates/bl_utils/: Cargo.toml
crates/bl_utils/src/: fs.rs  lib.rs  logging.rs  timers.rs
crates/bl_workspace/: Cargo.toml
crates/bl_workspace/src/: lib.rs  member.rs  resolver.rs  settings.rs
