[workspace]
members = [
  "crates/bl*",
]

resolver = "2"

[workspace.package]
authors = ["Alexander Fedotov <alexander.fedotov.uk@gmail.com>"]
edition = "2024"


[workspace.dependencies]
bl_ast  = {  path = "crates/bl_ast" }
bl_diagnostics = { path = "crates/bl_diagnostics" }
bl_lints = { path = "crates/bl_lints" }
bl_utils = { path = "crates/bl_utils" }
bl_workspace = { path = "crates/bl_workspace" }

anyhow = { version = "1.0.80" }
clap = { version = "4.5.3", features = ["derive"] }
[profile.release]
opt-level = 3
lto = "fat"
debug-assertions = false
overflow-checks = false

# strip any symbols from the executable, this makes backtraces un-readable
strip = false

# set debug to true when profiling
debug = false
