[workspace]
members = [
  "crates/bl*",
]

resolver = "2"

[workspace.package]
authors = ["Alexander Fedotov <alexander.fedotov.uk@gmail.com>"]
edition = "2024"


[workspace.dependencies]
bl_ast  = {  path = "crates/bl_ast" }
bl_diagnostics = { path = "crates/bl_diagnostics" }
bl_lints = { path = "crates/bl_lints" }
bl_utils = { path = "crates/bl_utils" }
bl_workspace = { path = "crates/bl_workspace" }

anyhow = { version = "1.0.80" }
argfile = { version = "0.2.0" }
bitflags = { version = "2.5.0" }
clap = { version = "4.5.3", features = ["derive"] }
colored = { version = "2.1.0" }
derive_more = "0.99.18"
globset = "0.4.14"
ignore = "0.4.22"
index_vec = "0.1.3"
itertools = "0.13.0"
line-span = "0.1.5"
log = { version = "0.4", features = ["kv_unstable", "kv_serde"] }
path-absolutize = "3.1.1"
wild = { version = "2" }
once_cell = "1.19.0"

[profile.release]
opt-level = 3
lto = "fat"
debug-assertions = false
overflow-checks = false

# strip any symbols from the executable, this makes backtraces un-readable
strip = false

# set debug to true when profiling
debug = false
