cargo-features = ["edition2024"]

[package]
name = "bracketlint"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
bl_diagnostics = { workspace = true }
bl_utils = { workspace = true }
bl_workspace = { workspace = true }
bl_lints = { workspace = true }

anyhow = { workspace = true }
argfile = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
colored = { workspace = true }
log = { workspace = true }
wild = { workspace = true}
once_cell = { workspace = true }
