cargo-features = ["edition2024"]

[package]
name = "bl_ast"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
bl_utils = { workspace = true }
bl_macros = { workspace = true }

derive_more = { workspace = true }
line-span = { workspace = true }
thin-vec = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
replace_with = { workspace = true }
